--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,33 @@
   margin: 0;
   border: 0;
 }
+
+main{
+  width: 100%;
+  height: 100vh;
+}
+
+section.milan{
+  width: 100%;
+  height: 33vh;
+  background-image: url(../img/milano.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.layover{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.3);
+  position: absolute;
+}
+
+h1{
+  color:red;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
