--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,25 @@ main{
   height: 100vh;
 }
 
-section.milan{
+section{
   width: 100%;
   height: 33vh;
-  background-image: url(../img/milano.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
 }
+
+/* img city */
+.milan{
+  background-image: url(../img/milano.jpg);
+}
+.roma{
+  background-image: url(../img/roma.jpg);
+}
+.napoli{
+  background-image: url(../img/napoli.jpg);
+}
+/* /img city */
 
 .layover{
   width: 100%;
@@ -25,8 +36,8 @@ section.milan{
   position: absolute;
 }
 
-h1{
-  color:red;
+div.position{
+  color: white;
   text-align: center;
   position: absolute;
   top: 50%;
