--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,20 @@ section{
 }
 /* /img city */
 
+
+/* layover */
 .layover{
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.3);
   position: absolute;
 }
+section:hover >  .layover {
+  display: none;
+}
+/* /layover */
 
+/* city text */
 div.position{
   color: white;
   text-align: center;
@@ -44,3 +51,7 @@ div.position{
   left: 50%;
   transform: translate(-50%,-50%);
 }
+h1, h3 {
+  text-shadow: 3px 3px #cc0099;
+}
+/* /city text */
