--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ main{
 
 section{
   width: 100%;
-  height: 33vh;
+  height: 100vh;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -53,5 +53,9 @@ div.position{
 }
 h1, h3 {
   text-shadow: 3px 3px #cc0099;
+}
+h1:hover {
+  background-color: green;
+  cursor: pointer
 }
 /* /city text */
